--- a/src/components/filter/filter.scss
+++ b/src/components/filter/filter.scss
@@ -1,3 +1,60 @@
 .filter{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    h1{
+        font-weight: 300;
+        font-size: 24px;
+    }
+
+    .item{
+        
+        display: flex;
+        flex-direction: column;
+        gap: 3px;
+
+        label{
+            font-size: 10px;
+        }
+        input{
+            width: 100px;
+            padding: 10px;
+            border: 1px solid #e0e0e0;
+            font-size: 14px;
+            border-radius: 5px;
+        }
+        select{
+            width: 100px;
+            padding: 10px;
+            border: 1px solid #e0e0e0;
+            font-size: 14px;
+            border-radius: 5px;
+        }
     
+    }
+    .top{
+        input{
+            width: 100%;
+
+        }
+    }
+    .bottom{
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+        
+        button{
+            width: 100px;
+            padding: 10px;
+            border: none;
+            cursor: pointer;   
+            background-color: #fece51; 
+            
+            img{
+                width: 24px;
+                height: 24px;
+            }
+        }
+    }
 }
