--- a/src/routes/listPage/listPage.scss
+++ b/src/routes/listPage/listPage.scss
@@ -1,15 +1,27 @@
+@import "../../responsive.scss";
+
 .listPage{
     display: flex;
     height: 100%;
     .listContainer{
         flex:3;
+        height: 100%;
         .wrapper{
+            height: 100%;
             padding-right: 45px; 
+            display: flex;
+            flex-direction: column;
+            gap: 55px;
+            overflow-y: scroll;
+            padding-bottom: 50px;
 
         }
     }
-    .mapContainer{flex:2;
-    background-color: #fcf5f3;
+    .mapContainer{
+        flex:2;
+        background-color: #fcf5f3;
+        height: 100%;
+
     }
 
 
