--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -8,7 +8,7 @@ nav {
   align-items: center;
 
   a {
-    transition: all 0.4s ease;
+    transition: all 2s ease;
 
     @include sm {
       display: none;
@@ -51,17 +51,17 @@ nav {
     flex: 2;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: flex-end; 
     background-color: #fcf5f3;
-    height: 100%;
+    height: 100%;  //Navbar right er height
 
     @include md {
-      background-color: transparent;
+      background-color: transparent; //no bg when medium
     }
 
     a {
       padding: 12px 24px;
-      margin: 20px;
+      margin: 25px;
     }
 
     .user{
@@ -129,17 +129,17 @@ nav {
     .menu {
       position: absolute;
       top: 0;
-      right: -50%;
+      right: -50%;  //so that it does not show on screen until the menu is clicked
       background-color: black;
       color: white;
       height: 100vh;
-      width: 50%;
-      transition: all 1s ease;
+      width: 40%;
+      transition: all 2s ease; //slides slowly
       display: flex;
       flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      font-size: 24px;
+      align-items: center; //left right
+      justify-content: center; //top bottom
+      font-size: 20px;
 
       &.active {
         right: 0;
