--- a/src/routes/Register/register.scss
+++ b/src/routes/Register/register.scss
@@ -1,10 +1,10 @@
 @import "../../responsive.scss";
-.login {
+.register {
     height: 100%;
     display: flex; //flex chilo
     
   
-    .formContainer {
+    .formContainers {
       flex: 3;
       height: 100%;
       display: flex;
@@ -14,7 +14,8 @@
       form {
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 15px;
+        width: 300px;
   
         input{
           padding: 20px;
@@ -44,8 +45,8 @@
   
         a{
           font-size: 14px;
-          color: gray;
-          border-bottom: 1px solid gray;
+          color: teal;
+          border-bottom: 1px solid rgb(114, 16, 219);
           width: max-content;
         }
       }
@@ -63,7 +64,7 @@
       }
   
       img {
-        width: 115%;
+        width: 110%;
         position: absolute;
         right: 0;
   
