--- a/client/src/routes/profilePage/profilePage.scss
+++ b/client/src/routes/profilePage/profilePage.scss
@@ -53,6 +53,16 @@
           gap: 20px;
         }
 
+        button{
+          width: 110px;
+          background-color: teal;
+          border:  none;
+          color: azure;
+          padding: 10px 20px;
+          cursor: pointer;
+          border-radius: 5px;
+        }
+
         img{
           width: 40px;
           height: 40px;
@@ -66,15 +76,32 @@
     flex: 2;
     background-color: #fcf5f3;
     height: 100%;
-
-    @include md{
-      flex:none;
-      height: max-content;
+    display: flex; 
+    align-items: center; 
+    justify-content: center;
+  
+    @include md {
+      flex: 2;
+      height: 500%;
     }
-
-    .wrapper{
+  
+    .wrapper {
+      text-align: center; 
       padding: 0px 20px;
-      height: 100%;
+      height: auto; 
+    }
+  
+    h3 {
+      font-weight: 5000;
+      margin-bottom: 50px; 
+      color: cadetblue;
+      font-size: x-large;
+    }
+  
+    h6 {
+      font-weight: 700;
+      margin-bottom: 10px;
+      font-size: small;
     }
   }
-}
+}  
